--- a/C++TestApp/C++TestApp.vcxproj.filters
+++ b/C++TestApp/C++TestApp.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="C++TestApp.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="Test2.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Test2.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
