--- a/C++TestApp/C++TestApp.vcxproj
+++ b/C++TestApp/C++TestApp.vcxproj
@@ -124,6 +124,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="C++TestApp.cpp" />
+    <ClCompile Include="Test2.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Test2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
