--- a/C++TestApp/C++TestApp.vcxproj
+++ b/C++TestApp/C++TestApp.vcxproj
@@ -124,9 +124,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="C++TestApp.cpp" />
+    <ClCompile Include="Primzahlen.cpp" />
     <ClCompile Include="Test2.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Primzahlen.h" />
     <ClInclude Include="Test2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
