added next Task

--- a/C++TestApp/C++TestApp.vcxproj
+++ b/C++TestApp/C++TestApp.vcxproj
@@ -124,6 +124,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="C++TestApp.cpp" />
+    <ClCompile Include="NumberCounter.cpp" />
     <ClCompile Include="Primzahlen.cpp" />
     <ClCompile Include="Test2.cpp" />
   </ItemGroup>
