--- a/C++TestApp/C++TestApp.vcxproj.filters
+++ b/C++TestApp/C++TestApp.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Primzahlen.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="NumberCounter.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Test2.h">
